# PIDX

./: CMakeLists.txt
CMake/: PIDXMacros.cmake
examples/convert/: raw-to-idx.c
hl/: CMakeLists.txt  PIDX_dataset.cpp  PIDX_dataset.h  PIDX_hl_test.cpp
metadata/: CMakeLists.txt  MetadataIDX.xsd  PIDX_metadata.cpp  PIDX_metadata.h  pidx_metadata_test.cpp
pidx/: PIDX.c  PIDX.h  PIDX_error_codes.c  PIDX_error_codes.h  PIDX_header_io.c  PIDX_idx_data_structs.h  PIDX_inc.h
pidx/core/PIDX_multi_patch_rst/: PIDX_multi_patch_rst.c
pidx/data_handle/: PIDX_idx_data_structs.h  PIDX_memory_layout_data_structs.h
pidx/io/PIDX_idx_io/: PIDX_idx_io.c
pidx/io/PIDX_multi_patch_idx_io/: PIDX_multi_patch_idx_io.c
tutorial/: CMakeLists.txt
tutorial/1_PIDX_Basics_Dumps/: checkpoint_multi_buffer.c  checkpoint_simple.c
tutorial/4_PIDX_Checkpoint_Restart/: PIDX_checkpoint_restart.cpp
